--- a/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/app/src/main/res/layout/fragment_popular_movies.xml
@@ -3,6 +3,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <!--fixme visibility was gone-->
+    <android.support.v7.widget.RecyclerView
+        android:visibility="visible"
+        android:id="@+id/popular_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <!--fixme this was up top-->
     <ProgressBar
         android:id="@+id/progressBar_popular"
         android:indeterminate="true"
@@ -10,12 +18,5 @@
         android:layout_height="40dp"
         android:layout_centerInParent="true"
         />
-
-    <android.support.v7.widget.RecyclerView
-        android:visibility="gone"
-        android:id="@+id/popular_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
 
 </RelativeLayout>
