--- a/app/src/main/res/layout/fragment_top_rated_movies.xml
+++ b/app/src/main/res/layout/fragment_top_rated_movies.xml
@@ -12,7 +12,7 @@
     />
 
 <android.support.v7.widget.RecyclerView
-    android:visibility="gone"
+    android:visibility="visible"
     android:id="@+id/top_rated_recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
