--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -3,6 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-             android:id="@+id/details_container">
+             android:id="@+id/details_container"
+             android:background="#232323">
 
 </FrameLayout>
