--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -8,15 +8,15 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/poster_height"
-
         app:cardUseCompatPadding="true"
+        app:cardCornerRadius="6dp"
         android:layout_gravity="center_horizontal"
         app:cardElevation="10dp">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+
         android:elevation="7dp"
         android:scaleType="fitXY"
         android:id="@+id/poster"/>
