--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -65,7 +65,7 @@
                         android:padding="8dp"
                         android:textAlignment="center"
                         android:textColor="@color/details_header_text"
-                        android:text="Placeholder Text"
+                        android:text="@string/placeholder_text"
                         android:gravity="center"
                         android:layout_marginBottom="10dp"/>
                     <TextView
@@ -74,8 +74,7 @@
                         android:id="@+id/release_date"
                         android:layout_below="@+id/detail_title_text"
                         android:textSize="14sp"
-                        android:text="13th December 1989"
-
+                        android:text="@string/placeholder_date"
                         android:textAlignment="center"
                         android:textColor="@color/details_header_text"
                         />
@@ -86,7 +85,6 @@
                         android:id="@+id/movie_rating"
                         style="?android:attr/ratingBarStyle"
                         android:progressTint="@color/details_header_text"
-
                         android:secondaryProgressTint="@color/details_header_text"
                         android:elevation="10dp"
                         android:layout_below="@+id/release_date"
@@ -111,7 +109,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/details_poster"
-                    android:src="@drawable/placeholder"/>
+                    android:src="@drawable/placeholder"
+                    android:transitionName="posterImage"/>
 
             </android.support.v7.widget.CardView>
 
@@ -141,19 +140,18 @@
                     android:textSize="18sp"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-
                 <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/overview_header"
-                android:textSize="16sp"
-                android:textColor="@color/details_header_text"
-                android:id="@+id/overview"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="8dp"
-                android:padding="8dp"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/overview_header"
+                    android:textSize="16sp"
+                    android:textColor="@color/details_header_text"
+                    android:id="@+id/overview"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="8dp"
+                    android:padding="8dp"/>
             </RelativeLayout>
 
 
