--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -16,8 +16,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:elevation="7dp"
+        android:transitionName="posterImage"
         android:scaleType="fitXY"
         android:id="@+id/poster"/>
     </android.support.v7.widget.CardView>
