--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,159 +7,160 @@
     android:id="@+id/coordinator_layout"
     android:fitsSystemWindows="true">
 
-  <android.support.v7.widget.Toolbar
-      android:layout_width="match_parent"
-      android:layout_height="?attr/actionBarSize"
-      android:background="@android:color/transparent"
-      android:elevation="10dp"
-      android:id="@+id/toolbar"
-      >
-
-  </android.support.v7.widget.Toolbar>
-  
-
-    
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <FrameLayout
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:elevation="10dp"
+        android:id="@+id/toolbar"
+        />
+
+
+
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="100dp">
+            android:orientation="vertical">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="100dp">
 
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="3dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginBottom="30dp">
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <android.support.v4.widget.Space
+                            android:layout_width="match_parent"
+                            android:layout_height="220dp"
+                            android:id="@+id/blank_space"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/blank_space"
+                            android:layout_marginTop="20dp"
+                            android:textSize="18sp"
+                            android:id="@+id/detail_title_text"
+                            android:layout_marginRight="@dimen/activity_horizontal_margin"
+                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                            android:padding="8dp"
+                            android:textAlignment="center"
+                            android:textColor="@color/details_header_text"
+                            android:text="@string/placeholder_text"
+                            android:gravity="center"
+                            android:layout_marginBottom="10dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/release_date"
+                            android:layout_below="@+id/detail_title_text"
+                            android:textSize="14sp"
+                            android:text="@string/placeholder_date"
+                            android:textAlignment="center"
+                            android:textColor="@color/details_header_text"
+                            />
+
+                        <RatingBar
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/movie_rating"
+                            style="?android:attr/ratingBarStyle"
+                            android:progressTint="@color/details_header_text"
+                            android:secondaryProgressTint="@color/details_header_text"
+                            android:elevation="10dp"
+                            android:layout_below="@+id/release_date"
+                            android:layout_margin="10dp"
+                            android:isIndicator="true"
+                            android:layout_centerHorizontal="true"
+                            android:rating="3.5"/>
+
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardElevation="20dp"
+                    app:cardCornerRadius="6dp"
+                    android:layout_marginLeft="100dp"
+                    android:layout_gravity="left|top"
+                    android:transitionName="posterImage">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/details_poster"
+                        android:src="@drawable/placeholder"
+                        android:scaleType="fitXY"
+                        />
+
+                </android.support.v7.widget.CardView>
+
+
+
+            </FrameLayout>
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="3dp"
-                android:layout_marginTop="40dp">
-
+                android:layout_marginTop="20dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="8dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <android.support.v4.widget.Space
-                        android:layout_width="match_parent"
-                        android:layout_height="220dp"
-                        android:id="@+id/blank_space"/>
-
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/blank_space"
-                        android:layout_marginTop="20dp"
+                        android:text="@string/overview"
+                        android:id="@+id/overview_header"
+                        android:layout_marginTop="10dp"
+                        android:textAlignment="center"
                         android:textSize="18sp"
-                        android:id="@+id/detail_title_text"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:padding="8dp"
-                        android:textAlignment="center"
-                        android:textColor="@color/details_header_text"
-                        android:text="@string/placeholder_text"
-                        android:gravity="center"
-                        android:layout_marginBottom="10dp"/>
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/release_date"
-                        android:layout_below="@+id/detail_title_text"
-                        android:textSize="14sp"
-                        android:text="@string/placeholder_date"
-                        android:textAlignment="center"
-                        android:textColor="@color/details_header_text"
-                        />
-
-                    <RatingBar
-                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/movie_rating"
-                        style="?android:attr/ratingBarStyle"
-                        android:progressTint="@color/details_header_text"
-                        android:secondaryProgressTint="@color/details_header_text"
-                        android:elevation="10dp"
-                        android:layout_below="@+id/release_date"
-                        android:layout_margin="10dp"
-                        android:isIndicator="true"
-                        android:layout_centerHorizontal="true"
-                        android:rating="3.5"/>
-
+                        android:layout_below="@+id/overview_header"
+                        android:textSize="16sp"
+                        android:textColor="@color/details_header_text"
+                        android:id="@+id/overview"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:layout_marginBottom="8dp"
+                        android:padding="8dp"/>
                 </RelativeLayout>
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardElevation="20dp"
-                app:cardCornerRadius="6dp"
-                android:layout_marginLeft="100dp"
-                android:layout_gravity="left|top"
-                android:transitionName="posterImage">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/details_poster"
-                    android:src="@drawable/placeholder"
-                    android:scaleType="fitXY"
-                    />
 
             </android.support.v7.widget.CardView>
+        </LinearLayout>
 
 
 
-        </FrameLayout>
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="20dp"
-            app:cardElevation="10dp"
-            app:cardCornerRadius="8dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/overview"
-                    android:id="@+id/overview_header"
-                    android:layout_marginTop="10dp"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/overview_header"
-                    android:textSize="16sp"
-                    android:textColor="@color/details_header_text"
-                    android:id="@+id/overview"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="8dp"
-                    android:padding="8dp"/>
-            </RelativeLayout>
-
-
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
-
-
-
-</ScrollView>
+    </ScrollView>
 </android.support.design.widget.CoordinatorLayout>
