--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">@color/md_red_600</color>
     <color name="unselected">@color/md_red_100</color>
     <color name="card_background">@color/md_white_1000</color>
-    <color name="details_status_bar">#1c1b1b</color>
+    <color name="details_status_bar">@color/md_white_1000</color>
     <color name="details_navigation_bar">#232323</color>
     <color name="details_header_text">#828080</color>
 
