--- a/app/src/main/res/layout-sw600dp/activity_movies.xml
+++ b/app/src/main/res/layout-sw600dp/activity_movies.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+ <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
@@ -14,14 +15,26 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/viewpager_container">
+        </FrameLayout>
         <FrameLayout
             android:id="@+id/details_container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-        </FrameLayout>
+            android:layout_weight="1">
         </FrameLayout>
     </LinearLayout>
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        >
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            >
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
 
 </FrameLayout>
