fixed database synnchroisation issue

--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -7,6 +7,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:background="@color/details_header_text"/>
 
     <Space
@@ -17,6 +19,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/author_textview"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:textSize="16sp"
         android:text="Author"/>
     <Space
@@ -27,6 +30,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/review_textview"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:textSize="16sp"
         android:text="Review"/>
     <Space
