--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -13,8 +13,8 @@
         app:cardCornerRadius="6dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="175dp"
+            android:layout_height="125dp"
             android:elevation="7dp"
             android:src="@drawable/trailer_thumbnail_debug"
             android:id="@+id/trailer_thumbnail"
