updating the details view

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -29,6 +29,7 @@
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:cardCornerRadius="8dp"
+                   android:backgroundTint="@color/accent"
                    app:cardElevation="3dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp">
@@ -54,7 +55,7 @@
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:padding="8dp"
                            android:textAlignment="center"
-                           android:textColor="@color/details_header_text"
+                           android:textColor="@color/md_white_1000"
                            android:text="@string/placeholder_text"
                            android:gravity="center"
                            android:layout_marginBottom="10dp"/>
@@ -66,7 +67,7 @@
                            android:textSize="14sp"
                            android:text="@string/placeholder_date"
                            android:textAlignment="center"
-                           android:textColor="@color/details_header_text"
+                           android:textColor="@color/md_white_1000"
                            />
 
                        <RatingBar
@@ -74,7 +75,7 @@
                            android:layout_height="wrap_content"
                            android:id="@+id/movie_rating"
                            style="?android:attr/ratingBarStyle"
-                           android:progressTint="@color/details_header_text"
+                           android:progressTint="#FFF"
                            android:secondaryProgressTint="@color/details_header_text"
                            android:elevation="10dp"
                            android:layout_below="@+id/release_date"
