--- a/app/src/main/res/layout/fragment_top_rated_movies.xml
+++ b/app/src/main/res/layout/fragment_top_rated_movies.xml
@@ -11,7 +11,7 @@
     android:layout_centerInParent="true"
     />
 
-<android.support.v7.widget.RecyclerView
+<androidx.recyclerview.widget.RecyclerView
     android:visibility="visible"
     android:id="@+id/top_rated_recyclerView"
     android:layout_width="match_parent"
